[package]
name = "AutomaSploitService"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11.6"
actix-web = { version = "4.9.0", features = ["default"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.89"
reqwest = {version = "0.12.12", features = ["json"]}
ollama-rs = {version = "0.2.4", features = ["stream"]}
futures = "0.3.17"
async-stream = "0.3"
bytes = "1.9.0"
tokio = { version = "1.43.0", features = ["time"] }